go-server/manifests/sec/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-todo-sec
  # labels:
    # pod-security.kubernetes.io/audit: restricted
    # pod-security.kubernetes.io/enforce: restricted
    # pod-security.kubernetes.io/warn: restricted
