go-server/manifests/sec/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-todo-server
  namespace: go-todo-sec
spec:
  selector:
    app: go-todo-server
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31000
