go-server/manifests/sec/deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: go-todo-sec
spec:
  podSelector:
    matchLabels:
      app: go-todo-server
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
